--- a/_custom.scss
+++ b/_custom.scss
@@ -23,7 +23,7 @@
 // elements such as forms, tables, tabs etc.
 //
 
-$page:         #fff;    // to match the page background, default is white
+$page:         #fff;    // to match the page background, default is white (#fff)
 $border:       #ccc;    // all borders set in global.styles - tables, fieldset, primary links
 $highlight:    #c00;    // required mark, form error highlight, "new" label on comments
 $ultralight:   #f5f5f5; // table row even, primary link inactive tabs
@@ -31,6 +31,15 @@ $light:        #eee;    // table row odd active, primary link inactive hover
 $medium_light: #ebebeb; // table row even active
 $medium_dark:  #e5e5e5; // table thead
 $debug:        rgba(255, 192, 203, 0.5); // Full width wrapper test
+
+// Kleuren voor Koor Swing//
+$col_bg_white:    rgba(255, 255, 255, 0.7); // Achtergrond van content: doorschijnend wit 
+
+$col_kobaltblauw: #3f36f2;                  // Kobaltblauw
+$col_lichtblauw:  #36c4c1;                  // Lichtblauw
+$col_donkerblauw: #000099;                  // Donkerblauw
+$col_geel:        #d8f080;                  // (Mais)geel                  
+
 
 $thead:          $medium_dark;
 $tr_odd:         $page;
@@ -183,7 +192,21 @@ $gutter-width: 10px;
   text-transform: uppercase;
   word-wrap: break-word;
 
-  .ie6-7 &>* {
-    position: relative; // Otherwise these elements will appear below the "Unpublished" text.
+  @if $legacy-support-for-ie6 or $legacy-support-for-ie7 {
+    .ie6-7 &>* {
+      position: relative; // Otherwise these elements will appear below the "Unpublished" text.
+    }
   }
 }
+
+// HJB mixins
+@mixin background-gradient($color-from, $color-to, $url) {   
+  background-image: url($url); /* fallback color if gradients are not supported */  
+  background-image: -webkit-linear-gradient(top, $color-from, $color-to); /* For Chrome and Safari */  
+  background-image:    -moz-linear-gradient(top, $color-from, $color-to); /* For old Fx (3.6 to 15) */  
+  background-image:     -ms-linear-gradient(top, $color-from, $color-to); /* For pre-releases of IE 10*/  
+  background-image:      -o-linear-gradient(top, $color-from, $color-to); /* For old Opera (11.1 to 12.0) */  
+  background-image:         linear-gradient(to bottom, $color-from, $color-to); /* Standard syntax; must be last */
+  }
+
+// HJB einde
